# spire

./: CMakeLists.txt  README.md  compile_flags.txt  spire.h  waddle.h
examples/: CMakeLists.txt  hash_map.c
include/: spire.h
src/: spire.c
tests/: CMakeLists.txt  hash_map.c  hash_set.c  main.c
toolchains/: x86_64-w64-mingw32.cmake
